# python_labs

./: .gitignore  README.md  cikl.py  from typing import List.py
src/: pyproject.toml
src/data/: input.txt  input_test.txt  output.csv  test_for_xlsx.xlsx
src/data/lab08/: students_input.json
src/data/samples/: people2.json  test_for_xlsx.xlsx
src/lab01/: 01_greeting.py  02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py  06_sort.py  07.py
src/lab01/lab02/: arrays.py  matrix.py  tuples.py
src/lab02/: arrays.py  matrix.py  tuples.py
src/lab03/: A1.py  A2.py  A3.py  B.py
src/lab03/lib/: text.py
src/lab03/libs/: text.py
src/lab04/: A.py  B.py
src/lab05/: A.py  B.py
src/lab06/: cli_convert.py  cli_text.py
src/lab07/: readme.md
src/lab07.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lab08/: README.md  models.py  serialize.py
src/lab09/: __init__.py  group.py
src/lab10/: A.py  B.py
src/lib/: converters.py  io_txt_csv.py  text.py
src/tests/: test_json_csv.py  test_text.py
